--- a/lm-from-scratch/notebooks/gpt_ma.ipynb
+++ b/lm-from-scratch/notebooks/gpt_ma.ipynb
@@ -2,31 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "from lm_from_scratch.corpus.decision_corpus import DecisionCorpus\n",
     "from lm_from_scratch.tokenizers.char_tokenizer import CharLevelTokenizer\n",
-    "from lm_from_scratch.models.gpt_ma import Gpt\n",
+    "# from lm_from_scratch.models.gpt_ma import Gpt\n",
+    "from lm_from_scratch.models.gpt_ma_2 import Gpt\n",
     "\n",
-    "BATCH_SIZE = 32 # how many independent sequences will we process in parallel?\n",
-    "BLOCK_SIZE = 8 # what is the maximum context length for predictions?\n",
+    "BATCH_SIZE = 64 # how many independent sequences will we process in parallel?\n",
+    "MAX_LEN = 128 # what is the maximum context length for predictions?\n",
     "MAX_ITERS = 10000\n",
     "EVAL_INTERVAL = 1000\n",
     "LEARNING_RATE = 1e-3\n",
     "DEVICE = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "EVAL_ITERS = 200\n",
     "\n",
-    "N_EMBEDDING = 32\n",
-    "HEAD_SIZE = 8\n",
-    "NUM_HEAD = 4 # NUM_HEAD * HEAD_SIZE = N_EMBEDDING"
+    "VOCAB_SIZE = 10000\n",
+    "N_EMBEDDING = 384\n",
+    "NUM_HEAD = 6\n",
+    "\n",
+    "# NUM_HEAD * HEAD_SIZE = N_EMBEDDING\n",
+    "HEAD_SIZE = N_EMBEDDING // NUM_HEAD"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,11 +45,47 @@
     "# Train and test splits\n",
     "n = int(0.9*len(corpus_df)) # first 90% will be train, rest val\n",
     "\n",
-    "data = corpus.get_text()\n",
+    "data = corpus.get_text()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tokenizers import Tokenizer\n",
+    "from tokenizers.models import BPE\n",
+    "from tokenizers.trainers import BpeTrainer\n",
+    "from tokenizers.pre_tokenizers import Whitespace\n",
+    "from tokenizers.processors import TemplateProcessing\n",
     "\n",
-    "tokenizer = CharLevelTokenizer(\"\".join(data))\n",
-    "corpus_df[\"idx\"] = [torch.tensor(tokenizer.encode(text), dtype=torch.long) for text in data]\n",
+    "tokenizer = Tokenizer(BPE(unk_token=\"[UNK]\"))\n",
+    "trainer = BpeTrainer(vocab_size=VOCAB_SIZE, special_tokens=[\"[UNK]\"])\n",
+    "tokenizer.pre_tokenizer = Whitespace()\n",
     "\n",
+    "tokenizer.train_from_iterator(data, trainer)\n",
+    "\n",
+    "# tokenizer = CharLevelTokenizer(\"\".join(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus_df[\"idx\"] = [torch.tensor(text.ids, dtype=torch.long) for text in tokenizer.encode_batch(data)]\n",
     "\n",
     "train_data = corpus_df[\"idx\"][:n]\n",
     "val_data = corpus_df[\"idx\"][n:].reset_index(drop=True)"
@@ -53,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,11 +106,11 @@
     "    doc_token_ix = []\n",
     "\n",
     "    for doc_i in doc_ix:\n",
-    "        ix = torch.randint(len(data[int(doc_i)]) - BLOCK_SIZE, (1,))\n",
+    "        ix = torch.randint(len(data[int(doc_i)]) - MAX_LEN, (1,))\n",
     "        doc_token_ix.append((int(doc_i), ix))\n",
     "    \n",
-    "    x = torch.stack([data[i][j:j+BLOCK_SIZE] for i,j in doc_token_ix])\n",
-    "    y = torch.stack([data[i][j+1:j+BLOCK_SIZE+1] for i,j in doc_token_ix])\n",
+    "    x = torch.stack([data[i][j:j+MAX_LEN] for i,j in doc_token_ix])\n",
+    "    y = torch.stack([data[i][j+1:j+MAX_LEN+1] for i,j in doc_token_ix])\n",
     "\n",
     "    x, y = x.to(DEVICE), y.to(DEVICE)\n",
     "    return x, y\n"
@@ -78,33 +118,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Gpt(tokenizer.vocab_size, NUM_HEAD, HEAD_SIZE, N_EMBEDDING, block_size=BLOCK_SIZE, dropout=0.1)\n",
+    "model = Gpt(VOCAB_SIZE, NUM_HEAD, HEAD_SIZE, N_EMBEDDING, max_len=MAX_LEN)\n",
     "m = model.to(DEVICE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step 0: train loss 5.0005, val loss 5.0025\n",
-      "step 1000: train loss 2.4825, val loss 2.5212\n",
-      "step 2000: train loss 2.3064, val loss 2.3432\n",
-      "step 3000: train loss 2.1877, val loss 2.2317\n",
-      "step 4000: train loss 2.1125, val loss 2.1781\n",
-      "step 5000: train loss 2.0666, val loss 2.1206\n",
-      "step 6000: train loss 2.0185, val loss 2.0933\n",
-      "step 7000: train loss 1.9658, val loss 2.0541\n",
-      "step 8000: train loss 1.9285, val loss 2.0297\n",
-      "step 9000: train loss 1.9082, val loss 1.9906\n"
+      "step 0: train loss 9.3776, val loss 9.3771\n",
+      "step 1000: train loss 1.4585, val loss 2.2623\n",
+      "step 2000: train loss 1.2907, val loss 2.1093\n",
+      "step 3000: train loss 1.1868, val loss 2.0281\n",
+      "step 4000: train loss 1.1159, val loss 1.9703\n",
+      "step 5000: train loss 1.0875, val loss 1.9756\n",
+      "step 6000: train loss 1.0274, val loss 1.9573\n",
+      "step 7000: train loss 1.0134, val loss 1.9673\n",
+      "step 8000: train loss 0.9722, val loss 1.9424\n",
+      "step 9000: train loss 0.9581, val loss 1.9390\n",
+      "step 10000: train loss 0.9409, val loss 1.9492\n",
+      "step 11000: train loss 0.9191, val loss 1.9622\n",
+      "step 12000: train loss 0.9082, val loss 1.9717\n",
+      "step 13000: train loss 0.8962, val loss 1.9879\n",
+      "step 14000: train loss 0.8743, val loss 1.9864\n"
      ]
     }
    ],
@@ -141,6 +186,53 @@
     "    optimizer.zero_grad(set_to_none=True)\n",
     "    loss.backward()\n",
     "    optimizer.step()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "COUR DE CASSATION Première présidence __________ [ F ] Pourvoi n ° : K 23 - 11 . 155 Demandeur ( s ) : M . [ S ] Avocat ( s ) : la SARL Boré , Salve de Bruneton et Mégret Défendeur ( s ) : Mme [ E ] et autre Avocat ( s ) : la SCP Célice , Texidor , Périer Ordonnance : 50 510 ORDONNANCE DE DÉCHÉANCE Mme Caroline Azar , conseillère référendaire , déléguée par le premier président de la Cour de cassation , a rendu la présente ordonnance . M . [ H ] [ B ],\n"
+     ]
+    }
+   ],
+   "source": [
+    "from torch.nn import functional as F\n",
+    "\n",
+    "# generate from the model\n",
+    "def generate(model, idx, max_new_tokens, max_len):\n",
+    "    # idx is (B, T) array of indices in the current context\n",
+    "    for _ in range(max_new_tokens):\n",
+    "        # crop idx to the last max_len tokens\n",
+    "        idx_cond = idx[:, -max_len:]\n",
+    "        # get the predictions\n",
+    "        logits, loss = model(idx_cond)\n",
+    "        # focus only on the last time step\n",
+    "        logits = logits[:, -1, :] # becomes (B, C)\n",
+    "        # apply softmax to get probabilities\n",
+    "        probs = F.softmax(logits, dim=-1) # (B, C)\n",
+    "        # sample from the distribution\n",
+    "        idx_next = torch.multinomial(probs, num_samples=1) # (B, 1)\n",
+    "        # append sampled index to the running sequence\n",
+    "        idx = torch.cat((idx, idx_next), dim=1) # (B, T+1)\n",
+    "    return idx\n",
+    "\n",
+    "context = torch.zeros((1, 1), dtype=torch.long, device=DEVICE)\n",
+    "\n",
+    "context = torch.tensor(\n",
+    "            tokenizer.encode(\"COUR DE CASSATION\\n Premi\\u00e8re pr\\u00e9sidence\").ids,\n",
+    "            dtype=torch.long,\n",
+    "            device=DEVICE)\n",
+    "\n",
+    "print(tokenizer.decode(generate(model,\n",
+    "                          context[None, :],\n",
+    "                          max_len=MAX_LEN,\n",
+    "                          max_new_tokens=100)[0].tolist()))\n"
    ]
   }
  ],
