--- a/lm-from-scratch/notebooks/gpt_sa.ipynb
+++ b/lm-from-scratch/notebooks/gpt_sa.ipynb
@@ -12,7 +12,7 @@
     "from lm_from_scratch.models.gpt_sa import Gpt\n",
     "\n",
     "BATCH_SIZE = 32 # how many independent sequences will we process in parallel?\n",
-    "BLOCK_SIZE = 8 # what is the maximum context length for predictions?\n",
+    "MAX_LEN = 8 # what is the maximum context length for predictions?\n",
     "MAX_ITERS = 10000\n",
     "EVAL_INTERVAL = 1000\n",
     "LEARNING_RATE = 1e-3\n",
@@ -65,11 +65,11 @@
     "    doc_token_ix = []\n",
     "\n",
     "    for doc_i in doc_ix:\n",
-    "        ix = torch.randint(len(data[int(doc_i)]) - BLOCK_SIZE, (1,))\n",
+    "        ix = torch.randint(len(data[int(doc_i)]) - MAX_LEN, (1,))\n",
     "        doc_token_ix.append((int(doc_i), ix))\n",
     "    \n",
-    "    x = torch.stack([data[i][j:j+BLOCK_SIZE] for i,j in doc_token_ix])\n",
-    "    y = torch.stack([data[i][j+1:j+BLOCK_SIZE+1] for i,j in doc_token_ix])\n",
+    "    x = torch.stack([data[i][j:j+MAX_LEN] for i,j in doc_token_ix])\n",
+    "    y = torch.stack([data[i][j+1:j+MAX_LEN+1] for i,j in doc_token_ix])\n",
     "\n",
     "    x, y = x.to(DEVICE), y.to(DEVICE)\n",
     "    return x, y\n"
@@ -81,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Gpt(tokenizer.vocab_size, HEAD_SIZE, N_EMBEDDING, block_size=BLOCK_SIZE, dropout=0.1)\n",
+    "model = Gpt(tokenizer.vocab_size, HEAD_SIZE, N_EMBEDDING, max_len=MAX_LEN, dropout=0.1)\n",
     "m = model.to(DEVICE)"
    ]
   },
