--- a/lm-from-scratch/notebooks/bigram.ipynb
+++ b/lm-from-scratch/notebooks/bigram.ipynb
@@ -12,7 +12,7 @@
     "from lm_from_scratch.models.bigram import BigramLanguageModel\n",
     "\n",
     "BATCH_SIZE = 32 # how many independent sequences will we process in parallel?\n",
-    "BLOCK_SIZE = 8 # what is the maximum context length for predictions?\n",
+    "MAX_LEN = 8 # what is the maximum context length for predictions?\n",
     "MAX_ITERS = 3000\n",
     "EVAL_INTERVAL = 300\n",
     "LEARNING_RATE = 1e-2\n",
@@ -62,11 +62,11 @@
     "    doc_token_ix = []\n",
     "\n",
     "    for doc_i in doc_ix:\n",
-    "        ix = torch.randint(len(data[int(doc_i)]) - BLOCK_SIZE, (1,))\n",
+    "        ix = torch.randint(len(data[int(doc_i)]) - MAX_LEN, (1,))\n",
     "        doc_token_ix.append((int(doc_i), ix))\n",
     "    \n",
-    "    x = torch.stack([data[i][j:j+BLOCK_SIZE] for i,j in doc_token_ix])\n",
-    "    y = torch.stack([data[i][j+1:j+BLOCK_SIZE+1] for i,j in doc_token_ix])\n",
+    "    x = torch.stack([data[i][j:j+MAX_LEN] for i,j in doc_token_ix])\n",
+    "    y = torch.stack([data[i][j+1:j+MAX_LEN+1] for i,j in doc_token_ix])\n",
     "\n",
     "    x, y = x.to(DEVICE), y.to(DEVICE)\n",
     "    return x, y\n"
