--- a/lm-from-scratch/notebooks/gpt_ma.ipynb
+++ b/lm-from-scratch/notebooks/gpt_ma.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,17 +20,23 @@
     "DEVICE = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "EVAL_ITERS = 200\n",
     "\n",
-    "VOCAB_SIZE = 10000\n",
+    "VOCAB_SIZE = 15000\n",
     "N_EMBEDDING = 384\n",
     "NUM_HEAD = 6\n",
     "\n",
-    "# NUM_HEAD * HEAD_SIZE = N_EMBEDDING\n",
     "HEAD_SIZE = N_EMBEDDING // NUM_HEAD"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load corpus"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,8 +55,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Build tokenizer"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -68,20 +81,24 @@
     "from tokenizers.models import BPE\n",
     "from tokenizers.trainers import BpeTrainer\n",
     "from tokenizers.pre_tokenizers import Whitespace\n",
-    "from tokenizers.processors import TemplateProcessing\n",
     "\n",
     "tokenizer = Tokenizer(BPE(unk_token=\"[UNK]\"))\n",
     "trainer = BpeTrainer(vocab_size=VOCAB_SIZE, special_tokens=[\"[UNK]\"])\n",
     "tokenizer.pre_tokenizer = Whitespace()\n",
     "\n",
-    "tokenizer.train_from_iterator(data, trainer)\n",
-    "\n",
-    "# tokenizer = CharLevelTokenizer(\"\".join(data))"
+    "tokenizer.train_from_iterator(data, trainer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Split corpus"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,8 +109,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Batch preparation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,8 +141,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model training"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,28 +159,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step 0: train loss 9.3776, val loss 9.3771\n",
-      "step 1000: train loss 1.4585, val loss 2.2623\n",
-      "step 2000: train loss 1.2907, val loss 2.1093\n",
-      "step 3000: train loss 1.1868, val loss 2.0281\n",
-      "step 4000: train loss 1.1159, val loss 1.9703\n",
-      "step 5000: train loss 1.0875, val loss 1.9756\n",
-      "step 6000: train loss 1.0274, val loss 1.9573\n",
-      "step 7000: train loss 1.0134, val loss 1.9673\n",
-      "step 8000: train loss 0.9722, val loss 1.9424\n",
-      "step 9000: train loss 0.9581, val loss 1.9390\n",
-      "step 10000: train loss 0.9409, val loss 1.9492\n",
-      "step 11000: train loss 0.9191, val loss 1.9622\n",
-      "step 12000: train loss 0.9082, val loss 1.9717\n",
-      "step 13000: train loss 0.8962, val loss 1.9879\n",
-      "step 14000: train loss 0.8743, val loss 1.9864\n"
+      "step 0: train loss 9.7944, val loss 9.7894\n",
+      "step 1000: train loss 1.4125, val loss 2.2427\n",
+      "step 2000: train loss 1.2409, val loss 2.0942\n",
+      "step 3000: train loss 1.1440, val loss 2.0273\n",
+      "step 4000: train loss 1.0818, val loss 2.0134\n",
+      "step 5000: train loss 1.0391, val loss 1.9939\n",
+      "step 6000: train loss 0.9791, val loss 1.9690\n",
+      "step 7000: train loss 0.9565, val loss 1.9643\n",
+      "step 8000: train loss 0.9414, val loss 1.9755\n",
+      "step 9000: train loss 0.9275, val loss 1.9793\n"
      ]
     }
    ],
@@ -189,15 +215,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test time"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "COUR DE CASSATION Première présidence __________ [ F ] Pourvoi n ° : K 23 - 11 . 155 Demandeur ( s ) : M . [ S ] Avocat ( s ) : la SARL Boré , Salve de Bruneton et Mégret Défendeur ( s ) : Mme [ E ] et autre Avocat ( s ) : la SCP Célice , Texidor , Périer Ordonnance : 50 510 ORDONNANCE DE DÉCHÉANCE Mme Caroline Azar , conseillère référendaire , déléguée par le premier président de la Cour de cassation , a rendu la présente ordonnance . M . [ H ] [ B ],\n"
+      "chambre criminelle de la Cour de cassation , composée en application de l ' article 567 - 1 - 1 du code de procédure pénale , des président et conseillers précités , après en avoir délibéré conformément à la loi , a rendu la présente décision . Vu l ' article 567 - 1 - 1 du code de procédure pénale : Après avoir examiné tant la recevabilité du recours que les pièces de procédure , la Cour de cassation constate qu ' il n ' existe , en l ' espèce , aucun moyen de nature à permettre l ' admission du pourvoi . EN CONSÉQUENCE , la Cour : DÉCLARE le pourvoi NON ADMIS ; Ainsi décidé par\n"
      ]
     }
    ],
@@ -225,7 +258,7 @@
     "context = torch.zeros((1, 1), dtype=torch.long, device=DEVICE)\n",
     "\n",
     "context = torch.tensor(\n",
-    "            tokenizer.encode(\"COUR DE CASSATION\\n Premi\\u00e8re pr\\u00e9sidence\").ids,\n",
+    "            tokenizer.encode(\"chambre criminelle de la Cour de cassation, compos\\u00e9e en application de l'article 567-1-1\").ids,\n",
     "            dtype=torch.long,\n",
     "            device=DEVICE)\n",
     "\n",
